2002-07-17  H.J. Lu <hjl@gnu.org>

	* gas/ia64/dv-branch.d: Updated.
	* gas/ia64/opc-b.d: Likewise.

2002-07-08  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/intel16.s: New.
	* gas/i386/intel16.d: New.
	* gas/i386/i386.exp: Run it.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* lib/gas-defs.exp (run_dump_test): Run objdump/nm/objcopy/readelf
	with LC_ALL=C to ensure consistent sorting.

2002-06-18  Dave Brolley  <brolley@redhat.com>

	* gas/frv: New testsuite.

Mon Jun 17 16:23:59 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* gas/sh/dsp.s: Add three more instructions.
	* gas/sh/dsp.d: Update.

2002-06-14  Daniel Jacobowitz  <drow@mvista.com>

	* gas/mips/lineno.d: Use --gstabs.
	* gas/mips/mips.exp (lineno.s): Remove XFAIL.

2002-06-12  Tom Rix  <trix@redhat.com>

	* gas/ppc/aix.exp: Run tests for all versions of powerpc AIX. Add
	text alignment tests.
	* gas/ppc/textalign-xcoff-001.d: New Test.
	* gas/ppc/textalign-xcoff-002.d: New Test.
	* gas/ppc/test1xcoff32.d : Change text section alignment.
	* gas/ppc/booke_xcoff.d: Remove invalid pad.

2002-06-06  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/hppa/basic/add.s: Set code level to 1.1.
	* gas/hppa/basic/branch.s: Likewise.
	* gas/hppa/basic/dcor.s: Likewise.
	* gas/hppa/basic/logical.s: Likewise.
	* gas/hppa/basic/shladd.s: Likewise.
	* gas/hppa/basic/sub.s: Likewise.
	* gas/hppa/basic/unit.s: Likewise.
	* gas/hppa/unsorted/unsorted.exp: Return if target "*-*-linux*".

2002-05-31  Chris G. Demetriou  <cgd@broadcom.com>

	* gas/mips/sb1-ext-mdmx.s: New file.
	* gas/mips/sb1-ext-mdmx.d: Likewise.
	* gas/mips/mips.exp: Run new "sb1-ext-mdmx" test.

2002-05-31  Chris G. Demetriou  <cgd@broadcom.com>

	* gas/mips/mips.exp: Use elf-rel2 and elfel-rel2 for
	mipsisa64*-*-* targets, rather than e32-rel2 and e32el-rel2.

2002-05-30  Chris G. Demetriou  <cgd@broadcom.com>

	* gas/mips/mips64-mdmx.s: Tweak to more thoroughly cover
	instruction encodings.
	* gas/mips/mips64-mdmx.d: Likewise.
